--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html>
     <head>
         <title>Game Mania - Uma Explosão de preços Baixos</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="css/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     </head>
     <body>
        <main>
            <nav>
                <div id="logo">
                    <h2>Game Mania - Uma Explosão de preços baixos </h2>
-                   <img src="img/produtos/gamemanialogo.png">
+                   <img src="img/produtos/gamemanialogo-branco.png">
                </div>
                <div id="menu">
                    <ul>
